# jaxls

./: .flake8  .gitignore  CLAUDE.md  DEV_NOTES.md  LICENSE  Makefile  README.md  benchmark.py  build_and_deploy_docs.sh  index.html  mypy.ini  objects.inv  pyproject.toml  searchindex.js  setup.py  strip_types.py  test_constraints.py  transpile_py310.py
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: core.doctree  covariance.doctree  lie_group_variables.doctree  solver_config.doctree
.doctrees/design/: schur_complement.doctree  sparse_matrices.doctree  traced_vs_static.doctree  typed_api.doctree
.doctrees/guide/: basics.doctree  tips_and_gotchas.doctree
.github/workflows/: build.yml  check_transpile.yml  coverage.yml  formatting.yml  mypy.yml  publish.yml  pyright.yml  pytest.yml
_modules/: index.html
_old/: _factor_graph.py  _factor_graph_base.py  _linear_factor_graph.py  test_se2.py
_sources/: index.rst
_sources/design/: traced_vs_static.ipynb
_static/js/: custom.js
api/core/: index.html
api/covariance/: index.html
api/lie_group_variables/: index.html
api/solver_config/: index.html
benchmarks/: README.md  analytic_jac_ba.py  bal.py  device_sweep.py  float32_check.py  make_regression_report.py  matched_iters.py  plot_frontier.py  profile_schur.py  regression.md  results.md  trace_examples.py
benchmarks/results/: ba_initial_cost.json  device_ladybug49_tuned_final.json  device_ladybug49_tuned_main.json  device_toy_tuned_final.json  device_toy_tuned_main.json  device_trafalgar138_tuned_final.json  device_trafalgar138_tuned_main.json  example_traces.json  matched_ladybug49.json  matched_toy.json
benchmarks/suite/: __init__.py  __main__.py  baseline.json  baseline.py  metrics.py  pyroki_ik.py  workloads.py
design/schur_complement/: index.html
design/sparse_matrices/: index.html
design/traced_vs_static/: index.html
design/typed_api/: index.html
docs/: .buildinfo  .buildinfo.bak  DOCS_GUIDE.md  Makefile  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js
docs/_modules/: index.html
examples/: 0_pose_graph.py  1_pose_graph_direct.py  2_pose_graph_g2o.py  3_constrained_pose_graph.py  4_deep_homography.py  4_imitation_learning.py  4_robot_arm_inverse_kinematics.py  4_sensor_calibration.py  5_deep_pnp.py  5_inequality_constraints.py  6_deep_homography.py  _g2o_utils.py  pose_graph_g2o.py  pose_graph_simple.py
genindex/: index.html
jaxfg/: __init__.py  _factors.py  _graph.py  _prepared_factor_graph.py  _types.py  _utils.py  _variable_assignments.py  _variables.py  test.py  types.py  utils.py
jaxfg2/: __init__.py  _factor_graph.py  _lie_group_variables.py  _solvers.py  _sparse_matrices.py  _variables.py  utils.py
jaxls/: __init__.py  _factor_graph.py  _solvers.py  _sparse_matrices.py  _variables.py
misc/: v2_proposal.md
scripts/: Untitled.ipynb  _g2o_utils.py  benchmark_runtime.py  jit_factor_test.py  least_squares_example_1.py  least_squares_example_2.py  least_squares_example_3.py  least_squares_example_4.py  linear_system_models.py  m3500_g2o.py  parking_garage_g2o.py  pose_graph_g2o.py  pose_graph_simple.py  simple_pose_graph.py  solve_g2o.py  sphere2500_g2o.py  test_g2o.py  test_jit_factor.py  test_linear_factor_graph.py  test_linear_system.py  test_poses.py  test_se2.py
scripts_v2/: ok.py  pose_graph_g2o.py  pose_graph_simple.py  v2.py
search/: index.html
tests/: test_constrained_optimization.py  test_covariance.py  test_deprecated_api.py  test_differentiable_solve.py  test_huber.py  test_import.py  test_integration.py  test_marginalization.py  test_pose_graph.py  test_pose_graphs.py  test_schur.py  test_sparse.py  test_update_buffer.py  test_va_permutation.py  test_variable_and_factor_ordering.py  test_viz.py
(+411 files in other folders)
