[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/jaxls/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = ["src/jaxls"]

[tool.hatch.build.targets.wheel]
packages = ["src/jaxls"]

[project]
name = "jaxls"
dynamic = ["version"]
description = "Nonlinear least squares with JAX"
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib",
    "jaxlie>=1.0.0",
    "jax_dataclasses>=1.6.2",
    "loguru",
    "termcolor",
    "tqdm",
    "rich>=13.0.0",
    "typing_extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.308",
    "pytest",
    "ruff",
    "libcst",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.0.0",
    "sphinx-copybutton>=0.5.0",
    "myst-nb>=1.0.0",
    "ipykernel",
    "matplotlib",
    "plotly",
    "opencv-python",
    "scipy",
    "scikit-sparse",
    "tyro",
    "robot_descriptions",
    "yourdfpy",
    "trimesh",
    "fast_simplification",
    "jupyterlab",
]

[project.urls]
"GitHub" = "https://github.com/brentyi/jaxls"

[tool.ruff]
exclude = ["_py310"]
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "E731",# Ignore lambda assignment warnings
    "E741", # Ignore ambiguous variable name warnings
]

[tool.pyright]
exclude = ["transpile_py310.py", "**/_py310/**", ".venv"]
